perf: optimize backend for low-resource VPS deployment
- Enable lazy initialization via SPRING_LAZY_INIT env var
- Add HikariCP connection pool tuning (max-pool-size, min-idle, timeouts)
- Make H2 console, show-sql, format_sql configurable via env vars
- Add production logging level configuration
- Add @Profile('!prod') to DataSeeder to skip heavy seeding in production
- Update .env.example with production optimization settings

Resolves CPU spikes and Nginx 504 timeouts on VPS.